adding retry mechanism for uptime check

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,12 @@ TWILIO_PHONE_NUMBER=+1234567890
 MONITOR_INTERVAL_SECONDS=60
 MONITOR_TIMEOUT_SECONDS=30
 
+# Retry Configuration (applies to all monitors)
+RETRY_COUNT=3                    # Number of retry attempts before failure (0 = no retries)
+RETRY_INITIAL_DELAY=1000         # Initial retry delay in milliseconds
+RETRY_MULTIPLIER=2               # Exponential backoff multiplier
+RETRY_MAX_DELAY=5000            # Maximum delay between retries in milliseconds
+
 # Optional: API Key for accessing API endpoints
 API_SECRET_KEY=your-secret-key-here
 
