add FIREBASE_SERVICE_ACCOUNT to amplify.yml

--- a/amplify.yml
+++ b/amplify.yml
@@ -20,8 +20,11 @@ frontend:
         - echo "TWILIO_AUTH_TOKEN=$TWILIO_AUTH_TOKEN" >> .env.production
         - echo "TWILIO_PHONE_NUMBER=$TWILIO_PHONE_NUMBER" >> .env.production
         - echo "CRON_SECRET=$CRON_SECRET" >> .env.production
+        # FCM Push Notifications - Option 1: Community Relay (Recommended)
         - echo "FCM_RELAY_URL=$FCM_RELAY_URL" >> .env.production
         - echo "FCM_RELAY_API_KEY=$FCM_RELAY_API_KEY" >> .env.production
+        # FCM Push Notifications - Option 2: Direct Firebase (Advanced - optional)
+        - echo "FIREBASE_SERVICE_ACCOUNT=$FIREBASE_SERVICE_ACCOUNT" >> .env.production
         - cat .env.production
     build:
       commands:
