feat: publish mobile app to Google Play Store
  - Update package name from com.uptimemonitor to io.screenapp.uptime_monitor_mobile
  - Bump version to 1.0.1+3 for Play Store release
  - Add new app icon across all platforms (Android, iOS, macOS, Windows, Linux)
  - Configure release signing with keystore support
  - Add Google Play Store link and mobile screenshots to README
  - Secure .gitignore rules for keystore files and Firebase config

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -43,3 +43,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Android signing keys - NEVER commit these!
+*.jks
+*.keystore
+**/key.properties
+**/android/key.properties
+/android/app/upload-keystore.jks
+/android/upload-keystore.jks
+upload-keystore.jks
+
+# Firebase config (optional - contains API keys)
+**/google-services.json
