--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="uptime_monitor_mobile"
+        android:label="Uptime Monitor"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
