feat(ios): improve notifications and add logger
- Add logger package for better debug logging
- Use SharedPreferences for FCM token (not sensitive data)
- Enable iOS foreground notification presentation
- Fix duplicate notifications on iOS (only show local notification on Android)
- Add export compliance flag to skip TestFlight encryption questions
- Add background modes for push notifications

--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -2,7 +2,7 @@ name: uptime_monitor_mobile
 description: "Uptime Monitor Mobile App - Monitor your services on the go"
 publish_to: 'none'
 
-version: 1.0.1+3
+version: 1.0.1+5
 
 environment:
   sdk: ^3.10.4
@@ -40,6 +40,7 @@ dependencies:
   # Utilities
   json_annotation: ^4.8.1
   equatable: ^2.0.5
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_test:
