chore: add vscode launch config and update gitignore
- Add Flutter debug configurations for VS Code
- Ignore .claude/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ relay/.firebaserc
 relay/functions/node_modules/
 relay/functions/.env
 relay/functions/.runtimeconfig.json
+
+# Claude Code
+.claude/
