adding multi tenant support

--- a/.env.example
+++ b/.env.example
@@ -14,15 +14,30 @@ NEXT_PUBLIC_APP_URL=http://localhost:3200
 NEXTAUTH_URL=http://localhost:3200
 # Used for both web (NextAuth.js) and mobile app (JWT) authentication
 NEXTAUTH_SECRET=your-random-secret-key-here-change-this-in-production
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=your-secure-password-here
 
-# Email Configuration (for alerts)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password
-EMAIL_FROM=noreply@uptimemonitor.com
+# DEPRECATED - Only needed for initial migration script (scripts/migrate-to-multi-tenant.ts)
+# After setup, users register via email + OTP (passwordless)
+# ADMIN_EMAIL=admin@example.com
+
+# DEPRECATED - No longer needed after migration to multi-tenant
+# ADMIN_USERNAME=admin
+# ADMIN_PASSWORD=your-secure-password-here
+
+# Email Configuration (for alerts and OTP)
+# For local development with Mailpit (docker-compose):
+# View emails at: http://localhost:8027
+EMAIL_HOST=mailpit
+EMAIL_PORT=1025
+EMAIL_USER=test
+EMAIL_PASSWORD=test
+EMAIL_FROM=noreply@localhost
+
+# For production (Gmail example):
+# EMAIL_HOST=smtp.gmail.com
+# EMAIL_PORT=587
+# EMAIL_USER=your-email@gmail.com
+# EMAIL_PASSWORD=your-app-password
+# EMAIL_FROM=noreply@uptimemonitor.com
 
 # Twilio Configuration (for phone call alerts)
 TWILIO_ACCOUNT_SID=your-twilio-account-sid
@@ -32,9 +47,10 @@ TWILIO_PHONE_NUMBER=+1234567890
 # Monitoring Configuration
 MONITOR_INTERVAL_SECONDS=60
 MONITOR_TIMEOUT_SECONDS=30
+MONITOR_BATCH_SIZE=10            # Number of monitors to check in parallel (default: 10)
 
 # Retry Configuration (applies to all monitors)
-RETRY_COUNT=3                    # Number of retry attempts before failure (0 = no retries)
+RETRY_COUNT=1                    # Number of retry attempts before failure (0 = no retries)
 RETRY_INITIAL_DELAY=1000         # Initial retry delay in milliseconds
 RETRY_MULTIPLIER=2               # Exponential backoff multiplier
 RETRY_MAX_DELAY=5000            # Maximum delay between retries in milliseconds
