feat: add multi-tenant support and update authentication flow for organization management

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,11 @@ NEXTAUTH_URL=http://localhost:3200
 # Used for both web (NextAuth.js) and mobile app (JWT) authentication
 NEXTAUTH_SECRET=your-random-secret-key-here-change-this-in-production
 
+# Multi-Tenant Mode
+# false = Single-tenant: Only invited users can join. First user creates org, others need invitation.
+# true = Multi-tenant: Each user can create their own organization.
+MULTI_TENANT=false
+
 # DEPRECATED - Only needed for initial migration script (scripts/migrate-to-multi-tenant.ts)
 # After setup, users register via email + OTP (passwordless)
 # ADMIN_EMAIL=admin@example.com
