--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -2,7 +2,7 @@ name: uptime_monitor_mobile
 description: "Uptime Monitor Mobile App - Monitor your services on the go"
 publish_to: 'none'
 
-version: 1.0.1+8
+version: 1.0.2+9
 
 environment:
   sdk: ^3.10.4
@@ -41,6 +41,7 @@ dependencies:
   json_annotation: ^4.8.1
   equatable: ^2.0.5
   logger: ^2.6.2
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
