feat: add monitoring and retry configurations to docker-compose files

--- a/docker-compose.selfhosted.yml
+++ b/docker-compose.selfhosted.yml
@@ -35,6 +35,14 @@ services:
       - TWILIO_ACCOUNT_SID=${TWILIO_ACCOUNT_SID}
       - TWILIO_AUTH_TOKEN=${TWILIO_AUTH_TOKEN}
       - TWILIO_PHONE_NUMBER=${TWILIO_PHONE_NUMBER}
+      # Monitoring Configuration
+      - MONITOR_TIMEOUT_SECONDS=${MONITOR_TIMEOUT_SECONDS:-10}
+      - MONITOR_BATCH_SIZE=${MONITOR_BATCH_SIZE:-10}
+      # Retry Configuration
+      - RETRY_COUNT=${RETRY_COUNT:-1}
+      - RETRY_INITIAL_DELAY=${RETRY_INITIAL_DELAY:-1000}
+      - RETRY_MULTIPLIER=${RETRY_MULTIPLIER:-2}
+      - RETRY_MAX_DELAY=${RETRY_MAX_DELAY:-5000}
 
   monitor:
     image: curlimages/curl:8.5.0
